# clmclogger

./: .gitignore  CMakeLists.txt  README.md  package.xml
example/: ExampleLogger.cpp  RosExampleLogger.cpp  RosExamplePublisher.cpp
include/clmclogger/: CLMCLogger.h  Logger.h
include/mrdplot/: Logger.h  MRDLogger.h  mrdplot.h
matlab/: clmcplot.m
matlab/clmcplot/: GenerateWorkspaceData.m  clmcplot_convert.m  clmcplot_functions.m  clmcplot_gen.m
matlab/mrdplot/: mrdplotX.m  mrdplotX_functions.m  mrdplotX_gen.m  mrdplot_convert.m  mrdplot_functions.m  notes.txt
src/: CLMCLogger.cpp  ExampleLogger.cpp  Logger.cpp  MRDLogger.cpp  mrdplot.cpp
src/old/: mrdplot.c
test/: test.cpp
