<?xml version="1.0"?>
<package>
  <name>mrdplot</name>
  <version>0.0.0</version>
  <description>The robot logging package</description>

  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>  
  
  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

</package>
